# kiutils

./: CHANGELOG.md  setup.cfg
.github/workflows/: python-test.yml
src/kiutils/: board.py  dru.py  footprint.py  libraries.py  schematic.py  symbol.py  wks.py
src/kiutils/items/: brditems.py  common.py  dimensions.py  fpitems.py  gritems.py  schitems.py  syitems.py  zones.py
src/kiutils/misc/: config.py
src/kiutils/utils/: format_float.py  format_utils.py  parsing_utils.py  sexp_prettify.py  sexpr.py
tests/: test_board.py  test_designrules.py  test_footprint.py  test_libtable.py  test_misc.py  test_schematic.py  test_symbol.py  test_worksheets.py  testfunctions.py
tests/testdata/board/: test_boardWithAllPrimitives.expected  test_createEmptyBoard
tests/testdata/board/community/: test_boardTokayLite
tests/testdata/designrules/since_v7/: test_severityToken
tests/testdata/libtable/: test_addEmptyLibraryObjectToLibTable.expected  test_addLibraryObjectToLibTable.expected  test_parseFpLibTable.expected  test_parseSymLibTable.expected
tests/testdata/schematic/: test_createEmptySchematic.expected
tests/testdata/schematic/community/: test_schematicGlasgow.expected  test_schematicSmartPrintCoreH7X.expected  test_schematicTokayLite
tests/testdata/worksheets/: test_allWorkSheetItems  test_createNewWorksheet
